# mycode

./: .env  .gitignore  company_research.py  douban_top250.json  index.json  output.txt
.auto-coder/: index.json  metadata.db
.notes/: directory_structure.md  meeting_notes.md  project_overview.md
actions/: 000_example.yml  101_current_work.yml  102_chat_action.yml  103_chat_action.yml  104_chat_action.yml  105_chat_action.yml  106_chat_action.yml  107_chat_action.yml  108_chat_action.yml  109_chat_action.yml  111_chat_action.yml  112_chat_action.yml  113_chat_action.yml  115_chat_action.yml  116_chat_action.yml  117_chat_action.yml  118_chat_action.yml  119_chat_action.yml  123_chat_action.yml  124_chat_action.yml  125_chat_action.yml  126_chat_action.yml  127_chat_action.yml  128_chat_action.yml  129_chat_action.yml  130_chat_action.yml  131_chat_action.yml  132_chat_action.yml  133_chat_action.yml  134_chat_action.yml  135_chat_action.yml  136_chat_action.yml  138_chat_action.yml  139_chat_action.yml  140_chat_action.yml  141_chat_action.yml
aider_auto_code_test/: main.py
aider_code_for_monitor/: main.py  tasks.json
aider_code_task/: database.db  main.py  tasks_tmp.json
aider_code_test/: main.py  task.py  tasks.json  tasks1.json  tasks_tmp.json
auto_coder_test/: main.py  snake_game.py
chrome_plugin_test/: background.js  manifest.json  popup.html  popup.js
cmd_llm/: main.py
code_rag/: ast_output.txt  code_parser.py  设计文档.md
crew_test/: README.md  appmap.yml  pyproject.toml
crew_test/src/: app.py
crew_test/src/crew_test/: crew.py  main.py
(+208 files in other folders)
