[tool.poetry]
name = "crew_test"
version = "0.1.0"
description = "crew_test using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}

[tool.poetry.scripts]
crew_test = "crew_test.main:run"

[tool.poetry.group.dev.dependencies]
appmap = {version = "^2.0.8", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"